; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/crypto/extr_zcrypt_cex4.c_zcrypt_cex4_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/crypto/extr_zcrypt_cex4.c_zcrypt_cex4_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ap_device = type { %struct.zcrypt_device* }
%struct.zcrypt_device = type { %struct.zcrypt_ops* }
%struct.zcrypt_ops = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ap_device*)* @zcrypt_cex4_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @zcrypt_cex4_remove(%struct.ap_device* %0) #0 {
  %2 = alloca %struct.ap_device*, align 8
  %3 = alloca %struct.zcrypt_device*, align 8
  %4 = alloca %struct.zcrypt_ops*, align 8
  store %struct.ap_device* %0, %struct.ap_device** %2, align 8
  %5 = load %struct.ap_device*, %struct.ap_device** %2, align 8
  %6 = getelementptr inbounds %struct.ap_device, %struct.ap_device* %5, i32 0, i32 0
  %7 = load %struct.zcrypt_device*, %struct.zcrypt_device** %6, align 8
  store %struct.zcrypt_device* %7, %struct.zcrypt_device** %3, align 8
  %8 = load %struct.zcrypt_device*, %struct.zcrypt_device** %3, align 8
  %9 = icmp ne %struct.zcrypt_device* %8, null
  br i1 %9, label %10, label %18

10:                                               ; preds = %1
  %11 = load %struct.zcrypt_device*, %struct.zcrypt_device** %3, align 8
  %12 = getelementptr inbounds %struct.zcrypt_device, %struct.zcrypt_device* %11, i32 0, i32 0
  %13 = load %struct.zcrypt_ops*, %struct.zcrypt_ops** %12, align 8
  store %struct.zcrypt_ops* %13, %struct.zcrypt_ops** %4, align 8
  %14 = load %struct.zcrypt_device*, %struct.zcrypt_device** %3, align 8
  %15 = call i32 @zcrypt_device_unregister(%struct.zcrypt_device* %14)
  %16 = load %struct.zcrypt_ops*, %struct.zcrypt_ops** %4, align 8
  %17 = call i32 @zcrypt_msgtype_release(%struct.zcrypt_ops* %16)
  br label %18

18:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @zcrypt_device_unregister(%struct.zcrypt_device*) #1

declare dso_local i32 @zcrypt_msgtype_release(%struct.zcrypt_ops*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
